--- a/ptc_web/public/index.html
+++ b/ptc_web/public/index.html
@@ -32,7 +32,7 @@
 
   <script>var Alert = ReactBootstrap.Alert;</script>
 
-  <title>React App</title>
+  <title>PTC Digital Manager</title>
 </head>
 
 <body>
